# biocro-lib

./: CMakeLists.txt  README.md  biocro_files_to_ignore  biocro_inc_files_to_ignore  update_script.sh
src/: CMakeLists.txt  Makefile
src/framework/: COPYRIGHTS  LICENSE.note  NEWS.md  README.md  dynamical_system.h  framework_version.h  numerical_jacobian.h  ode_solver.h  quadratic_root.cpp  state_map.h
src/framework/ode_solver_library/: ode_solver_factory.h
src/module_library/: module_library.h
