cmake_minimum_required(VERSION 3.20.0)
project(BioCro CXX)

set(CMAKE_CXX_STANDARD 11)
set(SKIP_BUILD_RPATH TRUE)
set(BUILD_WITH_INSTALL_NAME_DIR TRUE)
set(INSTALL_NAME_DIR "/Users/srohde/Documents/GitHub/gsrohde/public/DAWN/biocro-lib/src/build/")

add_library(BioCro SHARED)

#target_compile_options(BioCro PRIVATE -H)

target_include_directories(BioCro PUBLIC "../inc")

target_sources(BioCro PRIVATE ./framework/validate_dynamical_system.cpp)
target_sources(BioCro PRIVATE ./framework/ode_solver.cpp)
target_sources(BioCro PRIVATE ./framework/dynamical_system.cpp)
target_sources(BioCro PRIVATE ./framework/utils/module_dependency_utilities.cpp)
target_sources(BioCro PRIVATE ./framework/modules.cpp)
target_sources(BioCro PRIVATE ./framework/state_map.cpp)
target_sources(BioCro PRIVATE ./framework/dynamical_system_helper_functions.cpp)
target_sources(BioCro PRIVATE ./framework/module_helper_functions.cpp)
target_sources(BioCro PRIVATE ./framework/ode_solver_library/ode_solver_factory.cpp)
target_sources(BioCro PRIVATE ./framework/ode_solver_library/boost_ode_solvers.cpp)
target_sources(BioCro PRIVATE ./module_library/AuxBioCro.cpp)
target_sources(BioCro PRIVATE ./module_library/multilayer_c4_canopy.cpp)
target_sources(BioCro PRIVATE ./module_library/c3_canopy.cpp)
target_sources(BioCro PRIVATE ./module_library/multilayer_canopy_properties.cpp)
target_sources(BioCro PRIVATE ./module_library/c3CanAC.cpp)
target_sources(BioCro PRIVATE ./module_library/ball_berry.cpp)
target_sources(BioCro PRIVATE ./module_library/module_library.cpp)
target_sources(BioCro PRIVATE ./module_library/collatz_photo.cpp)
target_sources(BioCro PRIVATE ./module_library/eC4photo.cpp)
target_sources(BioCro PRIVATE ./module_library/multilayer_c3_canopy.cpp)
target_sources(BioCro PRIVATE ./module_library/c4_leaf_photosynthesis.cpp)
target_sources(BioCro PRIVATE ./module_library/CanAC.cpp)
target_sources(BioCro PRIVATE ./module_library/c4photo.cpp)
target_sources(BioCro PRIVATE ./module_library/rue_leaf_photosynthesis.cpp)
target_sources(BioCro PRIVATE ./module_library/multilayer_rue_canopy.cpp)
target_sources(BioCro PRIVATE ./module_library/penman_monteith_leaf_temperature.cpp)
target_sources(BioCro PRIVATE ./module_library/c3photo.cpp)
target_sources(BioCro PRIVATE ./module_library/c3EvapoTrans.cpp)
target_sources(BioCro PRIVATE ./module_library/rasmussen_specific_heat.cpp)
target_sources(BioCro PRIVATE ./module_library/c3_leaf_photosynthesis.cpp)
